# tlsproxy_rs

./: .dockerignore  .gitignore  .sync  Cargo.toml  Dockerfile  Dockerfile.x64-musl  README.md  TODO.md  build.sh  changes.md  compile_x64_musl.sh  config.yaml  log4rs.yaml  package.sh  resolve.json  rules.json  tasks.md  todo.md  todo1.md
.claude/skills/verify/: SKILL.md
angular-ui/: build.sh  package-lock.json
angular-ui/src/app/: app.component.ts  pf.service.ts
angular-ui/src/app/configuration/: configuration.component.html  configuration.component.ts
deploy/: compose.yaml  tlsproxy.service
docs/superpowers/plans/: 2026-07-12-accounting-cdr-log.md  2026-07-15-interface-bind-syntax.md
docs/superpowers/specs/: 2026-07-12-accounting-cdr-log-design.md  2026-07-15-interface-bind-syntax-design.md
runtime/local_ca/: admin-cert.pem  admin-key.pem
src/: accounting.rs  acl.rs  acme_challenge.rs  acme_types.rs  active_tracker.rs  admin_server.rs  adminserver.rs  auth.rs  bindaddr.rs  bootstrap.rs  ca.rs  certificate.rs  config.rs  control_api.rs  controller.rs  errors.rs  events_hub.rs  extensible.rs  forward.rs  hello_cache.rs  hostutil.rs  http_header.rs  idle_tracker.rs  idletracker.rs  ifutil.rs  listener_stats.rs  main.rs  managed_tls.rs  manager.rs  relay.rs  request_id.rs  resolve.rs  resolver.rs  rules.rs  runner.rs  runtime.rs  runtime_config.rs  runtime_live.rs  statistics.rs  store.rs  (+5 more)
src/acme/: backend.rs  client.rs  dns.rs  mod.rs  scheduler.rs
src/dataplane/: forward.rs  l4.rs  lifecycle.rs  mod.rs  pipeline.rs
src/dataplane/http/: mod.rs  static_files.rs
src/dataplane/tls/: mod.rs  passthrough.rs  terminate.rs
src/listener/: control_plane.rs  default.rs  forward.rs  http_passthrough.rs  mod.rs  tls_passthrough.rs  tls_terminate.rs
static/: app.js  control.html  index.html  login.html  main.694aad5fa52871de.js  main.b63908fb14a94a63.js  main.c67910ac08c9d113.js  main.df261ba143276826.js  setup.html  styles.css
tests/: pebble_harness.rs
tests/pebble/: README.md  compose.yaml  pebble-config.json  run.sh
