[package]
name = "tlsproxy_rs"
version = "1.0.2"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4.3", features = ["derive"] }
bytesize = {version = "1.2", features = ["serde"]}
chrono = "0.4"
regex = "1.9"
serde_json = "1.0"
futures = "0.3"
log4rs = { version="1.2.0", features = ["gzip", "background_rotation"] }
log = "0.4"
serde = "1"

[[bin]]
name="tlsproxy"
path="src/main.rs"

[[bin]]
name="test"
path="src/test.rs"
