[package]
name = "tlsproxy"
version = "3.0.0"
edition = "2021"
rust-version = "1.85"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_yaml_ng = "0.10"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
log = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.8"
axum-server = { version = "0.7", features = ["tls-rustls-no-provider"] }
base64 = "0.22"
serde_json = "1"
regex = "1"
serde_derive = "1"
async-speed-limit = "0.4"
short-uuid = "0.2"
include_dir = {version="0.7", features=["glob", "metadata"]}
rcgen = { version = "0.14", features = ["pem", "x509-parser"] }
rustls = "0.23"
rustls-pemfile = "2"
tokio-rustls = "0.26"
time = "0.3"
x509-parser = { version = "0.18", features = ["verify"] }
lru = "0.18.1"
tokio-tree-context = "0.1.6"

[dev-dependencies]
tempfile = "3"
