[package]
name = "tlsproxy"
version = "3.0.0"
edition = "2021"
rust-version = "1.88"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_yaml_ng = "0.10"
anyhow = "1"
arc-swap = "1"
clap = { version = "4", features = ["derive"] }
log = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = { version = "0.8", features = ["ws"] }
axum-server = { version = "0.8", features = ["tls-rustls-no-provider"] }
base64 = "0.22"
serde_json = "1"
regex = "1"
serde_derive = "1"
async-speed-limit = "0.4"
short-uuid = "0.2"
include_dir = {version="0.7", features=["glob", "metadata"]}
rcgen = { version = "0.14", features = ["pem", "x509-parser"] }
rustls = "0.23"
rustls-pemfile = "2"
tokio-rustls = "0.26"
time = { version = "0.3", features = ["formatting", "macros", "parsing", "serde"] }
x509-parser = { version = "0.18", features = ["verify"] }
lru = "0.18.1"
tokio-tree-context = "0.1.6"
flate2 = "1"
zstd = "0.13"
if-addrs = "0.15"
rocksdb = { version = "0.24", default-features = false, features = ["lz4"] }
argon2 = "0.5"
rand = "0.9"
sha2 = "0.10"
hex = "0.4"
http-body-util = "0.1"
hyper = { version = "1", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["server", "server-auto", "tokio", "service"] }
tower = { version = "0.5", features = ["util"] }
subtle = "2"
instant-acme = { version = "0.8.5", features = ["time", "x509-parser"] }
hickory-resolver = "0.25.2"
futures-util = "0.3"
tempfile = "3"

[dev-dependencies]
tokio-tungstenite = "0.29"
